# evo-python-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  code_review_summary.md  pyproject.toml
.github/: CODEOWNERS  (+5 more)
samples/: README.md  pyproject.toml
samples/auth-and-evo-discovery/: native-app-token.ipynb  service-app_token.ipynb
samples/blockmodels/: api-examples.ipynb  sdk-examples.ipynb
samples/blockmodels/create-a-block-model/: create-a-regular-block-model.ipynb  create-a-variable-octree-block-model.ipynb
samples/blockmodels/download-a-block-model/: download-entire-block-model.ipynb  download-using-bbox.ipynb
samples/blockmodels/manage-block-models/: delete-a-block-model.ipynb  listing-block-models.ipynb  restore-a-block-model.ipynb
samples/blockmodels/sampler/: blockmodels-evo-api.ipynb  blockmodels-evo-sdk.ipynb  blockmodels.ipynb  requirements.txt
samples/blockmodels/update-a-block-model/: adding-columns.ipynb  deleting-columns.ipynb  renaming-columns.ipynb  updating-columns.ipynb
samples/colormaps/: api-examples.ipynb  sdk-examples.ipynb
samples/colour-maps/: api-examples.ipynb
samples/extras/: working-with-parquet.ipynb
samples/files/: README.md  delete-a-file.ipynb  download-a-file.ipynb  list-files.ipynb  upload-a-file.ipynb
samples/files/Scripts/: Evo File Input script.py  Evo File Input-Ouput script.py  MX Deposit File to Evo File script.py
samples/geoscience-objects/download-drilling-campaign/: download-drilling-campaign.ipynb
samples/geoscience-objects/download-pointset/: download-pointset.ipynb
samples/geoscience-objects/helpers/: evo_common.py
samples/geoscience-objects/publish-downhole-collection/: publish-downhole-collection.ipynb
samples/geoscience-objects/publish-drilling-campaign/: publish-drilling-campaign.ipynb
samples/geoscience-objects/publish-pointset/: publish-pointset.ipynb
samples/geoscience-objects/publish-regular-2d-grid/: README.md  publish-regular-2d-grid.ipynb
samples/geoscience-objects/publish-triangular-mesh/: publish-triangular-mesh.ipynb
samples/workspaces/: api-examples.ipynb  basic-operations.ipynb  sdk-examples.ipynb
samples/workspaces/bonus/: move-objects.ipynb  workspace_utils.py
samples/workspaces/maintenance/: move-objects.ipynb  workspace_widgets.py
samples/workspaces/user-roles/: assign-roles-to-users.ipynb  list-user-roles.ipynb  remove-a-users-role.ipynb  retrieve-current-users-role.ipynb
(+86 files in other folders)
