[project]
name = "evo-python-sdk"
version = "0.1.0"
description = "Monorepo containing independently versioned Evo Python SDKs"
requires-python = ">=3.10"
dependencies = [
    "evo-sdk-common[aiohttp]",
    "evo-objects[utils]",
    "evo-files",
]
dynamic = ["readme"]

[project.optional-dependencies]
notebooks = [
    "evo-sdk-common[notebooks]",
]

[dependency-groups]
test = ["pytest", "freezegun", "parameterized==0.9.0"]
dev = [
    "pre-commit >= 4",
    "ruff==0.9.1",              # keep in sync with .pre-commit-config.yaml
    "bumpver",
    "coverage[toml]",
    { include-group = "test" },
    { include-group = "notebooks" },
]
notebooks = [
    "evo-python-sdk[notebooks]",
    "jupyter",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "RUF022"]

[tool.uv.sources]
evo-sdk-common = { workspace = true }
evo-files = { workspace = true }
evo-objects = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
include = ["/src"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
# Literal TOML strings (single quotes) need no escaping of backslashes.
pattern = '\[(.+?)\]\(((?!https?://)\S+?)\)'
replacement = '[\1](https://github.com/SeequentEvo/evo-python-sdk/tree/main/packages/$HFPR_PACKAGE_NAME/\g<2>)'
